# SuperCloud

./: CMakeLists.txt  README.md  Readme.md  cmake_cmd.bat
exe/: CMakeLists.txt
exe/serv1/: CMakeLists.txt  serv1.cpp
src/: CMakeLists.txt  SuperCloud.cpp
src/fs/: FileSystemManager.hpp  StandardManager.cpp  StandardManager.hpp  stubFileSystemManager.hpp
src/fs/base/: FsChunk.hpp  FsDirectory.hpp  FsElt.cpp  FsElt.hpp  FsFile.hpp  FsObject.hpp  FsStorage.cpp  FsStorage.hpp
src/fs/inmemory/: FsChunkInMemory.cpp  FsChunkInMemory.hpp  FsDirInMemory.cpp  FsDirInMemory.hpp  FsFileInMemory.cpp  FsFileInMemory.hpp  FsStorageInMemory.cpp  FsStorageInMemory.hpp
src/fs/local/: FsChunkLocal.cpp  FsChunkLocal.hpp  FsDirLocal.cpp  FsDirLocal.hpp  FsFileLocal.cpp  FsFileLocal.hpp  FsStorageLocal.cpp  FsStorageLocal.hpp
src/network/: BoostAsioNetwork.cpp  BoostAsioNetwork.hpp  ClusterAdminMessageManager.cpp  ClusterAdminMessageManager.hpp  ClusterManager.hpp  ConnectionMessageManager.cpp  ConnectionMessageManager.hpp  ConnectionMessageManagerInterface.hpp  IdentityManager.cpp  IdentityManager.hpp  IdentityManagerCrypto.cpp  NetworkAdapter.hpp  Peer.cpp  Peer.hpp  PhysicalServer.cpp  PhysicalServer.hpp  ServerIdDb.cpp  ServerIdDb.hpp
src/os/: FuseImpl.cpp  FuseImpl.hpp  FuseInterface.hpp
src/synch/: AbstractFSMessageManager.hpp  ExchangeChunk.hpp  ExchangeChunkMessageManager.cpp  ExchangeChunkMessageManager.hpp  FsExternalInterface.cpp  FsExternalInterface.hpp  PropagateChange.hpp  PropagateChangeAndGrabData.hpp  RequestCheckForModification.hpp  SynchTreeMessageManager.cpp  SynchTreeMessageManager.hpp  SynchroAtConnection.cpp  SynchroAtConnection.hpp  SynchroDb.cpp  SynchroDb.hpp
src/utils/: ByteBuff.cpp  ByteBuff.hpp  Parameters.cpp  Parameters.hpp  Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  FakeNetwork.cpp  FakeNetwork.hpp  WaitConnection.hpp
tests/crypto/: CMakeLists.txt  IdentityManager.hpp  test_cryptopp-aes.cpp  test_cryptopp-rsa.cpp  test_cryptopp.cpp
tests/fs/: CMakeLists.txt  test_base_fs.cpp  test_in_memory.cpp
tests/network/: CMakeLists.txt  FakeNetwork.cpp  FakeNetwork.hpp  test_connection.cpp  test_connection_fake_network.cpp  test_connection_messages.cpp
tests/others/: CMakeLists.txt  test_ByteBuff.cpp
tests/synch/: CMakeLists.txt  test_chunk_synch.cpp  test_main.cpp  test_tree_synch.cpp  test_tree_update.cpp
